Fix url("..") whitespace formatting regex.
Missed some cases.

--- a/lesscpy/test/less/ws.less
+++ b/lesscpy/test/less/ws.less
@@ -57,3 +57,7 @@ color:                            yellow;
 		padding: src('no semi in media block')
 	}
 }
+@font-face {
+  src: url('x') format('e'),
+       url('r') format('s');
+}
